--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -16,7 +16,7 @@
           Page last modified: <span class="d-inline-block">{{ page.last_modified_date | date: site.last_edit_time_format }}</span>.
         </p>
       {% endif %}
-      {% if
+      <!--{% if
         site.gh_edit_link and
         site.gh_edit_link_text and
         site.gh_edit_repository and
@@ -26,7 +26,7 @@
         <p class="text-small mb-0">
           <a href="{{ site.gh_edit_repository }}/{{ site.gh_edit_view_mode }}/{{ site.gh_edit_branch }}{% if site.gh_edit_source %}/{{ site.gh_edit_source }}{% endif %}{% if page.collection and site.collections_dir %}/{{ site.collections_dir }}{% endif %}/{{ page.path }}" id="edit-this-page">{{ site.gh_edit_link_text }}</a>
         </p>
-      {% endif %}
+      {% endif %}-->
     </div>
   {% endif %}
 
